# illum-ai-cli

./: .gitignore  LICENSE  README.md  abst.md  main.py  pyproject.toml
docs/: tty-interactive-input.md
factcheck_cli/: cli.py
factcheck_cli/rag/: add.py  check.py
illum_cli/: cli.py  explain.py
illum_cli/rag/: add.py  check.py  db.py
nvim/: factcheck.lua  illum.lua
