[project]
name = "illum-ai-cli"
version = "0.1.0"
description = "AIによる研究・開発支援CLIツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "click>=8.3.1",
    "ollama>=0.6.1",
    "pypdf>=5.0.0",
    "rich>=14.3.3",
]

[project.scripts]
illum = "illum_cli.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["illum_cli"]
